force-app/main/default/objects/TestADL_TestLibDataLake__dll/TestADL_TestLibDataLake__dll.object-meta.xml
<CustomObject>
    <label>TestADL_TestLibDataLake</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>