force-app/main/default/objects/TestADL_TestLibDataLake__dll/fields/contract_date__c.field-meta.xml
<CustomField>
    <fullName>contract_date__c</fullName>
    <label>contract_date</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>contract_date</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>