force-app/main/default/objects/TestADL_TestLibDataLake__dll/fields/insurance_period_start__c.field-meta.xml
<CustomField>
    <fullName>insurance_period_start__c</fullName>
    <label>insurance_period_start</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>insurance_period_start</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>