force-app/main/default/objects/TestADL_TestLibDataLake__dll/fields/policy_terms__c.field-meta.xml
<CustomField>
    <fullName>policy_terms__c</fullName>
    <label>policy_terms</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>policy_terms</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>