force-app/main/default/objects/TestADL_TestLibDataLake__dll/fields/policyholder_name__c.field-meta.xml
<CustomField>
    <fullName>policyholder_name__c</fullName>
    <label>policyholder_name</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>policyholder_name</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>